# ELC-Semantic-Similarity-Model-Development

./: .gitignore  eda.ipynb  npl_test_data_for_sentence_semantic_analysis.xlsx  pyproject.toml  semantic_model_dev.ipynb  semantic_model_fuzzy_dev.ipynb  ~$npl_test_data_for_sentence_semantic_analysis.xlsx
notebooks/: semantic_model_dev.ipynb  semantic_model_fuzzy_dev.ipynb
results/: cross_encoder_results  cross_encoder_results_top200  sentence_trans_cross_encoder_results  sentence_trans_cross_encoder_results_top200
src/: data_processing.py  eval.py
